--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>escola de sonhos</title>
+  <title>o que ?</title>
+  <meta name="viewport" content="width=1062, height=591, user-scalable=no">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= favicon_link_tag image_path('favicon.ico') %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <meta property='title' content='a escola dos seus sonhos' />
+	<meta property='og:title' content='a escola dos seus sonhos' />
+
+	<meta property='og:image' content='http://webhomes.com/images/what-we-do/webhomes-what-we-do-cloud-computing.jpg' />
+	<meta property='og:image:url' content='http://webhomes.com/images/what-we-do/webhomes-what-we-do-cloud-computing.jpg' />
+	<meta property='og:image:secure_url' content='http://webhomes.com/images/what-we-do/webhomes-what-we-do-cloud-computing.jpg' />
+
+	<meta property='og:image:width' content='300' />
+	<meta property='og:image:height' content='200' />
+
 </head>
 <body>
 
